--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -6,6 +6,7 @@ description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, 
 permalink: /blogs
 include-in-other-pages-list: false
 include-in-menu: true
+hero-image: ''
 ---
 <h1>Blogs</h1>
 
