--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,6 +15,34 @@ include-in-other-pages-list: false
 
 Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. Op verzoek kom ik thuis langs op de woensdag.
 
+## Contactformulier
+
+<div markdown="0" class="u-mb+">
+		
+	<form name="contact" id="contact" action="/" netlify>
+		<div>
+			<label class="c-label">Naam</label>
+	    	<input class="c-input u-mb-" type="naam" name="naam" placeholder="Voornaam achternaam" required>
+		</div>
+		<div>
+			<label class="c-label">E-mailadres</label>
+	    	<input class="c-input u-mb-" type="naam" name="naam" required>
+		</div>
+		<div>
+			<label class="c-label">Telefoonnummer</label>
+	    	<input class="c-input u-mb-" type="naam" name="naam"  required>
+		</div>
+		<div>
+			<label class="c-label">Je bericht of vraag</label>
+	    	<textarea class="c-input u-mb-" type="naam" name="naam" required></textarea>
+		</div>						
+	    <div>
+	    <button class="c-button">Versturen</button>
+	   	</div>
+	</form>
+
+</div>
+
 ## Contactgegevens:
 
 Kiann Kindercoaching & Opvoedondersteuning
