--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,15 +26,15 @@ Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscent
 		</div>
 		<div>
 			<label class="c-label">E-mailadres</label>
-	    	<input class="c-input u-mb-" type="naam" name="naam" required>
+	    	<input class="c-input u-mb-" type="e-mailadres" name="e-mailadres">
 		</div>
 		<div>
 			<label class="c-label">Telefoonnummer</label>
-	    	<input class="c-input u-mb-" type="naam" name="naam"  required>
+	    	<input class="c-input u-mb-" type="telefoonnummer" name="telefoonnummer">
 		</div>
 		<div>
 			<label class="c-label">Je bericht of vraag</label>
-	    	<textarea class="c-input u-mb-" type="naam" name="naam" required></textarea>
+	    	<textarea class="c-input u-mb-" type="je-bericht-of-vraag" name="je-bericht-of-vraag" required></textarea>
 		</div>						
 	    <div>
 	    <button class="c-button">Versturen</button>
