Update all title tags

--- a/pages/blogs.html
+++ b/pages/blogs.html
@@ -1,7 +1,7 @@
 ---
 layout: blogs
 title: Blogs
-title-tag: Blogs - Kiann Kindercoaching & Opvoedondersteuning
+title-tag: Blogs
 description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, perspiciatis fugiat corporis accusantium dolor quibusdam mollitia eaque est alias, quod cupiditate laudantium explicabo maiores quia doloremque tempora enim quo nesciunt!
 permalink: /blogs
 include-in-other-pages-list: false
