Update Contactpagina “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,6 @@ permalink: contact
 hero-image: /uploads/annelies-hofstee_kiann_lsfotografie-1.jpg
 hero-slogan: ''
 include-in-menu: true
-include-in-other-pages-list: false
 ---
 # Praktische informatie & Tarieven
 
@@ -45,10 +44,10 @@ Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscent
 
 ## Contactgegevens:
 
-Kiann Kindercoaching & Opvoedondersteuning
-Waterviolier 1, 9613 BH Meerstad - Groningen (Gezondheidscentrum Meerstad)
-info@kiannkindercoaching.nl
-Tel: 06-13183955
+* Kiann Kindercoaching & Opvoedondersteuning
+* Waterviolier 1, 9613 BH Meerstad - Groningen (Gezondheidscentrum Meerstad)
+* info@kiannkindercoaching.nl
+* Tel: 06-13183955
 
 ![](/uploads/thumbnail_20190917_190719_1568740072185_resized.jpg)
 
