--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@ Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscent
 	<form name="contact" id="contact" action="/" netlify>
 		<div>
 			<label class="c-label">Naam</label>
-	    	<input class="c-input u-mb-" type="naam" name="naam" placeholder="Voornaam achternaam" required>
+	    	<input class="c-input u-mb-" type="naam" name="naam"  required>
 		</div>
 		<div>
 			<label class="c-label">E-mailadres</label>
