Fix title tags in blog posts

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Contact- en adresgegevens & Tarieven
-title-tag: Contact
+title: Contact
+title-tag: Contact- en adresgegevens & Tarieven
 description: >-
   Heb je een vraag? Neem gerust contact op via het contactformulier op deze
   pagina  of via info@kiannkindercoaching.nl. Kindercoach Annelies Hofstee. 
