Add Google Analytics

--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,7 @@ title: Home
 title-tag: Kindercoach met passie! in Groningen
 description: >+
   Ondersteuning voor hooggevoelig kind, sterke wil, boosheid, faal-angst, dwang,
-  weerbaarheid, scheiding, Ik leer leren en Plannen-Kiann kindercoaching.
-
+  weerbaarheid, scheiding, Ik leer leren en Plannen.
 permalink: /
 hero-image: uploads/hero-home.jpg
 hero-slogan: Neem mijn hand aan op weg naar jouw doel!
