Update Hoofdpagina's “home”

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,14 +2,14 @@
 layout: default
 title: Home
 title-tag: Kindercoach met passie! in Groningen
-description: >+
-  Ondersteuning voor hooggevoelig kind, sterke wil, boosheid, faal-angst, dwang,
-  weerbaarheid, scheiding, Ik leer leren en Plannen.
+description: >
+  Ondersteuning bij hooggevoeligheid, sterke wil, boosheid, faalangst, dwang,
+  weerbaarheid, scheiding, Ik leer leren, plannen en uitvoeren/ Kiann
+  kindercoaching
 permalink: /
 hero-image: uploads/hero-home.jpg
 hero-slogan: Neem mijn hand aan op weg naar jouw doel!
 include-in-menu: true
-include-in-other-pages-list: false
 ---
 ## Ik ben Annelies Hofstee.  Al vele jaren werk ik vol passie met kinderen vanaf 3 maand tot en met  pubers en hun ouders.
 
