Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,6 @@ permalink: contact
 hero-image: /uploads/annelies-hofstee_kiann_lsfotografie-1.jpg
 hero-slogan: ''
 include-in-menu: true
-include-in-other-pages-list: false
 ---
 # Praktische informatie & Tarieven
 
@@ -59,6 +58,12 @@ De prijs van de Training ‘Ik leer leren’ training van 5 bijeenkomsten van 1 
 De prijs voor de workshop 'Plannen en Uitvoeren' is €100 voor 2 bijeenkomsten van 1,5 uur, inclusief een mooi naslagwerk.
 
 U ontvangt na elke sessie een factuur per mail.
+
+![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/ziizorg rondje_LOGO (1).png "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
+
+Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
+
+
 
 * Je kunt je kind en/of jezelf aanmelden via het aanmeldingsformulier onderaan deze pagina.
 * We stemmen vooraf af of we eerst met jou/jullie als ouder(s) de hulpvraag onderzoeken,of dat de eerste afspraak direct in het bijzijn van je kind plaatsvindt.
