--- a/pages/contact.html
+++ b/pages/contact.html
@@ -59,7 +59,7 @@ De prijs voor de workshop 'Plannen en Uitvoeren' is €100 voor 2 bijeenkomsten 
 
 U ontvangt na elke sessie een factuur per mail.
 
-![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/ziizorg rondje_LOGO (1).png "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
+![Zorgplatform-Ziizorg-Kiann-Kindercoaching]( "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
 
 Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
 
