--- a/pages/contact.html
+++ b/pages/contact.html
@@ -61,11 +61,7 @@ U ontvangt na elke sessie een factuur per mail.
 
 ![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/ziizorg LOGO - aangepast grootte.png "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
 
-\    Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
-
-
-
-
+Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
 
 * Je kunt je kind en/of jezelf aanmelden via het aanmeldingsformulier onderaan deze pagina.
 * We stemmen vooraf af of we eerst met jou/jullie als ouder(s) de hulpvraag onderzoeken,of dat de eerste afspraak direct in het bijzijn van je kind plaatsvindt.
