Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,17 +2,19 @@
 layout: default
 title: Contact
 title-tag: Contact- en adresgegevens & Tarieven
-description: >-
-  Heb je een vraag? Neem gerust contact op via het contactformulier op deze
-  pagina  of via info@kiannkindercoaching.nl. Kindercoach Annelies Hofstee. 
+description: "Heb je een vraag? Neem gerust contact op via het contactformulier
+  op deze pagina  of via info@kiannkindercoaching.nl. Kindercoach Annelies
+  Hofstee. "
 permalink: contact
 hero-image: /uploads/annelies-hofstee_kiann_lsfotografie-1.jpg
-hero-slogan: ''
+hero-slogan: ""
 include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
 Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. Op verzoek kom ik thuis langs op de woensdag.
+
+**I.v.m. vakantie is de praktijk tot 20 juli 2020 gesloten.**
 
 ## Contactformulier
 
