--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,7 +14,7 @@ include-in-menu: true
 
 Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. Op verzoek kom ik thuis langs op de woensdag.
 
-**I.v.m. vakantie is de praktijk tot 20 juli 2020 gesloten.**
+**I.v.m. vakantie is de praktijk tot maandag 20 juli 2020 gesloten.**
 
 ## Contactformulier
 
