Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,9 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. 
+**De Praktijk is momenteel gesloten.**
 
-**I.v.m. vakantie is de praktijk tot maandag 20 juli 2020 gesloten.**
+Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. 
 
 ## Contactformulier
 
