Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-**De Praktijk is momenteel gesloten.**
+**Update januari 2022: De Praktijk is momenteel gesloten voor nieuwe klanten.**
 
 Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. 
 
