Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,7 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-**Update maart 2022: I.v.m. het stoppen van mijn praktijk neem ik helaas geen nieuwe klanten meer aan.** 
-
-Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur. Omgeven door natuur, ruimte en rust. 
+Coachingsessies vinden plaats bij jullie thuis of in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur.
 
 ## Contactformulier
 
@@ -51,13 +49,13 @@ Coachingsessies vinden plaats op vrijdag in mijn praktijk in het Gezondheidscent
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
-![](/uploads/thumbnail_20190917_190719_1568740072185_resized.jpg)
+![]()
 
-Het tarief voor een eerste coaching gesprek is €55. Vervolggesprekken zijn €45. Een sessie duurt 50 à 60 minuten
+Het tarief voor een coaching gesprek is €60. Een sessie duurt 60 minuten.
 
 De prijs van de Training ‘Ik leer leren’ training van 5 bijeenkomsten van 1 ½ uur is individueel €297,50 en €195 voor de groepstraining. Deze bedragen zijn inclusief het werkboek.
 
-De prijs voor de workshop 'Plannen en Uitvoeren' is €100 voor 2 bijeenkomsten van 1,5 uur, inclusief een mooi naslagwerk.
+De prijs voor de workshop 'Plannen en Uitvoeren' is €120 voor 2 bijeenkomsten van 1,5 uur, inclusief een mooi naslagwerk.
 
 U ontvangt na elke sessie een factuur per mail.
 
