Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,9 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-Coachingsessies vinden plaats bij jullie thuis of in het Gezondheidscentrum in Meerstad (Groningen) met parkeerruimte voor de deur.
+V﻿oor de coachingssessies kom ik bij jullie thuis, zodat het kind in zijn vertrouwde omgeving is.
 
-## Contactformulier
+Contactformulier
 
 <div markdown="0" class="u-mb+">
 		
@@ -45,7 +45,7 @@ Coachingsessies vinden plaats bij jullie thuis of in het Gezondheidscentrum in M
 ## Contactgegevens:
 
 * Kiann Kindercoaching & Opvoedondersteuning
-* Waterviolier 1, 9613 BH Meerstad - Groningen (Gezondheidscentrum Meerstad)
+* M﻿eerstad
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
