Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,9 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-V﻿oor de coachingssessies kom ik bij jullie thuis, zodat het kind in zijn vertrouwde omgeving is.
+V﻿oor de coaching-sessies kom ik bij jullie thuis, in de vertrouwde omgeving van het kind. Ook kan ik meekijken op school wanneer dat gewenst is. 
+
+
 
 Contactformulier
 
@@ -64,7 +66,7 @@ U ontvangt na elke sessie een factuur per mail.
 Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
 
 * Je kunt je kind en/of jezelf aanmelden via het aanmeldingsformulier onderaan deze pagina.
-* We stemmen vooraf af of we eerst met jou/jullie als ouder(s) de hulpvraag onderzoeken,of dat de eerste afspraak direct in het bijzijn van je kind plaatsvindt.
+* We stemmen vooraf af of we eerst met jou/jullie als ouder(s) de hulpvraag onderzoeken, of dat de eerste afspraak direct in het bijzijn van je kind plaatsvindt.
 * De praktijk wijst uit dat er na 1 tot 5 afspraken al veel is veranderd. Aan het eind van iedere coaching bespreken we wat er nog meer nodig is en of een nieuwe afspraak wenselijk is.
 * Wilt u bij verhindering uw afspraak 24 uur van tevoren afmelden? Dit geeft mij nog de gelegenheid het plekje op te vullen. Dit is dan kosteloos. Wordt de afspraak later afgemeld of vergeten, dan ben ik genoodzaakt deze in rekening te brengen.
 * Het is mogelijk om coaching in te schakelen als uw kind een persoonsgebonden budget (PGB) ontvangt. Hiermee kunt u zelf zorg, hulp en begeleiding inkopen.
