Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@ description: "Heb je een vraag? Neem gerust contact op via het contactformulier
   op deze pagina  of via info@kiannkindercoaching.nl. Kindercoach Annelies
   Hofstee. "
 permalink: contact
-hero-image: ""
+hero-image: /uploads/annelies-hofstee-kiann-kindercoaching.jpg
 hero-slogan: ""
 include-in-menu: true
 ---
