Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,8 +14,6 @@ include-in-menu: true
 
 V﻿oor de coaching-sessies kom ik bij jullie thuis, in de vertrouwde omgeving van het kind. Ook kan ik meekijken op school wanneer dat gewenst is. 
 
-
-
 Contactformulier
 
 <div markdown="0" class="u-mb+">
@@ -51,7 +49,7 @@ Contactformulier
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
-![]()
+![](/uploads/annelies-hofstee-kiann-kindercoaching.jpg)
 
 Het tarief voor een coaching gesprek is €60. Een sessie duurt 60 minuten.
 
