Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@ Contactformulier
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
-![](/uploads/annelies-hofstee-kiann-kindercoaching.jpg)
+![]()
 
 Het tarief voor een coaching gesprek is €60. Een sessie duurt 60 minuten.
 
@@ -59,7 +59,7 @@ De prijs voor de workshop 'Plannen en Uitvoeren' is €120 voor 2 bijeenkomsten 
 
 U ontvangt na elke sessie een factuur per mail.
 
-![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/ziizorg LOGO - aangepast grootte.png "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
+![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/annelies-hofstee-kiann-kindercoaching.jpg "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
 
 Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
 
