Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -59,7 +59,7 @@ De prijs voor de workshop 'Plannen en Uitvoeren' is €120 voor 2 bijeenkomsten 
 
 U ontvangt na elke sessie een factuur per mail.
 
-![Zorgplatform-Ziizorg-Kiann-Kindercoaching](/uploads/annelies-hofstee-kiann-kindercoaching.jpg "Zorgplatform-Ziizorg-Kiann-Kindercoaching")
+![](/uploads/annelies-hofstee-kiann-kindercoaching.jpg)
 
 Aangesloten bij Zorgplatform Ziizorg [https://www.ziizorg.nl/](https://www.ziizorg.nl)
 
