Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -51,7 +51,7 @@ Contactformulier
 
 ![](/uploads/annelies-hofstee-kiann-kindercoaching.jpg)
 
-Het tarief voor een coaching gesprek is €60. Een sessie duurt 60 minuten.
+Het tarief voor een coaching gesprek is €60. Een sessie duurt 60 minuten. Het tarief voor het schrijven van een verslag is €20.
 
 De prijs van de Training ‘Ik leer leren’ training van 5 bijeenkomsten van 1 ½ uur is individueel €297,50 en €195 voor de groepstraining. Deze bedragen zijn inclusief het werkboek.
 
