Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,8 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
+**N﻿IEUWS! Per 1 juli 2024 kunnen afspraken gemaakt worden in mijn praktijkruimte op de woensdagmiddag in het nieuwe Gezondheidscentrum in Meerstad.**
+
 V﻿oor de coaching-sessies kom ik bij jullie thuis, in de vertrouwde omgeving van het kind. Ook kan ik meekijken op school wanneer dat gewenst is. 
 
 Contactformulier
