Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,7 +47,7 @@ Contactformulier
 ## Contactgegevens:
 
 * Kiann Kindercoaching & Opvoedondersteuning
-* M﻿eerstad
+* Waterviolier 1a, 9613 BH Meerstad
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
