Update Hoofdpagina's “contact”

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,9 +12,11 @@ include-in-menu: true
 ---
 # Praktische informatie & Tarieven
 
-**N﻿IEUWS! Per 1 september 2024 kunnen afspraken gemaakt worden op woensdagmiddag in mijn praktijkruimte in het Gezondheidscentrum in Meerstad.**
+**Elke woensdagmiddag vanaf 13 uur is mijn praktijkruimte in het Gezondheidscentrum in Meerstad geopend voor coaching-sessies op afspraak.**
 
-V﻿oor de coaching-sessies kom ik bij jullie thuis, in de vertrouwde omgeving van het kind. Ook kan ik meekijken op school wanneer dat gewenst is. 
+**Voor het maken van een afspraak of het stellen van een vraag, vul onderstaand contactformulier in of stuur een mail naar info@kiannkindercoaching.nl.**
+
+
 
 Contactformulier
 
@@ -47,7 +49,7 @@ Contactformulier
 ## Contactgegevens:
 
 * Kiann Kindercoaching & Opvoedondersteuning
-* Waterviolier 1a, 9613 BH Meerstad
+* Gezondheidscentrum Meerstad, Waterviolier 1a, 9613 BH te Meerstad
 * info@kiannkindercoaching.nl
 * Tel: 06-13183955
 
