--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,8 @@ hero-image: uploads/hero-home.jpg
 hero-slogan: Neem mijn hand aan op weg naar jouw doel!
 include-in-menu: true
 ---
+## P﻿er 9 juli 2025 is de praktijk gesloten!
+
 ## Ik ben Annelies Hofstee.  Al vele jaren werk ik vol passie met kinderen vanaf 3 maand tot en met tieners en hun ouders.
 
 Tijdens het proces van opgroeien en opvoeden kun je tegen diverse obstakels aanlopen waar je als ouder en/of kind in vastloopt. Ik help jullie graag weer op de goede weg.
